# autonomous_drive_commentry

./: .gitignore  README.md  pyproject.toml
src/: bot.py  main.py  readme.md  speaker.py
src/configs/: prompt.toml
